compiler/toc-hir-lowering/tests/snapshots/lowering__lower_constrained_type_sized-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : .. 2"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..12): "<root>"@(dummy)
      StmtBody@(src/main.t:0..12): []
        StmtItem@(src/main.t:0..12): ItemId(0)
          ConstVar@(src/main.t:0..12): var "_"@(src/main.t:4..5)
            Constrained@(src/main.t:8..12): end => Expr
              ExprBody@(src/main.t:11..12)
                Literal@(src/main.t:11..12): Integer(2)
              ExprBody@(dummy)
error at src/main.t:8..10: unexpected token
| error for src/main.t:8..10: expected expression, but found `..`
