compiler/toc-hir-lowering/tests/snapshots/lowering__lower_constrained_type_sized.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : 1 .. 2"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..14): "<root>"@(dummy)
      StmtBody@(src/main.t:0..14): []
        StmtItem@(src/main.t:0..14): ItemId(0)
          ConstVar@(src/main.t:0..14): var "_"@(src/main.t:4..5)
            Constrained@(src/main.t:8..14): end => Expr
              ExprBody@(src/main.t:8..9)
                Literal@(src/main.t:8..9): Integer(1)
              ExprBody@(src/main.t:13..14)
                Literal@(src/main.t:13..14): Integer(2)
