compiler/toc-hir-lowering/tests/snapshots/lowering__lower_constrained_type_unsized-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : array 1 .. * of int := 2"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..32): "<root>"@(dummy)
      StmtBody@(src/main.t:0..32): []
        StmtItem@(src/main.t:0..32): ItemId(0)
          ConstVar@(src/main.t:0..32): var "_"@(src/main.t:4..5)
            Array@(src/main.t:8..27): MaybeDyn
              Constrained@(src/main.t:14..20): end => Unsized(None)
                ExprBody@(src/main.t:14..15)
                  Literal@(src/main.t:14..15): Integer(1)
              Primitive@(src/main.t:24..27): Int
            ExprBody@(src/main.t:31..32)
              Literal@(src/main.t:31..32): Integer(2)
error at src/main.t:14..20: unsized range types require an `init` initializer
| error for src/main.t:31..32: not an `init` expression
