compiler/toc-hir-lowering/tests/snapshots/lowering__lower_constrained_type_unsized-4.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : 1 .. *"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..14): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..14): []
        StmtItem@(FileId(1), 0..14): ItemId(0)
          ConstVar@(FileId(1), 0..14): var "_"@(FileId(1), 4..5)
            Constrained@(FileId(1), 8..14): end => Unsized(None)
              ExprBody@(FileId(1), 8..9)
                Literal@(FileId(1), 8..9): Integer(1)
error at (FileId(1), 8..14): cannot use unsized range type here
| error for (FileId(1), 8..14): unsized range types can only be used in array ranges

